<resources>
    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="input_check_amount_hint">Check</string>
    <string name="input_tip_percentage_hint">Tip Percentage</string>
    <string name="bill_amount_label">Check</string>
    <string name="tip_amount_label">Tip</string>
    <string name="total_amount_label">Total</string>

    <string name="dollar_amount">$%1$.02f</string>

    <string name="save_hint">Enter Location</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>

    <string name="action_load">Load</string>
</resources>
